--- a/css/generalStyle.css
+++ b/css/generalStyle.css
@@ -49,4 +49,39 @@
     padding: 10px 20px 10px 20px;
     
  } 
+ h1,h3{
+     font-weight: bold;
+ }
+ .input-error {
+    border: 1px solid rgb(124, 28, 33);
+    color: rgb(124, 28, 33);
+    background-color: rgb(240, 199, 199);
+    width: 100%;
+    height: 35px;
+    border-radius: 25px;
+  
+    padding: 0 10px 0 20px;
+    box-sizing: border-box;
+   
+    font-size: 14px;
+    outline: none;
+  }
+  .input-error::placeholder {
+    color: rgb(124, 28, 33);
+    opacity: 0.8;
+    font-weight: bold;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  }
+  
+  .label-error {
+    font-size: 13px;
+    color: rgb(124, 28, 33);
+    width: fit-content;
+    height: fit-content;
+    padding: 10px;
+    padding-top: 0;
+      margin-top: 0;
+    box-sizing: border-box;
+    margin-left: 10px;
+  }
   
